--- a/src/main/resources/templates/thread-content.html
+++ b/src/main/resources/templates/thread-content.html
@@ -54,7 +54,7 @@
     </div>
 
     <div>
-        <a th:href="@{/thread/{thread.id}/add-reply/(thread.id=${{thread.id}})}" class="button">Odpowiedz</a>
+        <a th:href="@{/thread/{thread.id}/add-reply(thread.id=${{thread.id}})}" class="button">Odpowiedz</a>
     </div>
 
 </div>
