--- a/src/main/resources/templates/topic-content.html
+++ b/src/main/resources/templates/topic-content.html
@@ -27,8 +27,13 @@
     <div th:each="thread : ${threads}" class="thread-grid">
         <div class="thread-subject">
             <a th:text="${thread.subject}" th:href="'/thread/' + ${thread.id}" class="thread-title"></a>
+            <a th:href="@{/thread/{threadId}/delete-thread(threadId=${thread.id})}"
+               onclick="return confirm('Czy na pewno chcesz usunąć ten temat?')" class="delete-thread">Usuń temat</a>
+            <!-- TODO usuń temat-->
         </div>
-        <div th:text="${authors.getUserById({thread.authorId}).login}" class="thread-stats"></div>
+        <div th:text="${authors.getUserById({thread.authorId}).login}"
+             th:class="${authors.getUserById({thread.authorId}).function == T(com.kuba.forum.model.User.Function).ADMIN} ? 'thread-stats-author-admin' : 'thread-stats-author-user'"
+        ></div>
         <div th:text="${replys.getPostsFromThread({thread.id}).size() - 1}" class="thread-stats"></div>
     </div>
 
