stream refactoring, merged post content to DTO, login/register exception handling with sessionData

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -10,6 +10,7 @@
     <meta charset="UTF-8">
     <title>Filmovie - mówimy o filmach</title>
     <link rel="stylesheet" href="/common.css">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
 </th:block>
 
 <th:block th:fragment="page-header">
