refacforing: optional/stream, DTO: thread/topic+methods/HTML update

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -49,5 +49,9 @@
         <a href="/logout" class="main-menu-link">Wyloguj</a>
     </div>
 </th:block>
+
+<th:block th:fragment="page-footer">
+    <div class="page-footer"> &copy; 2023 by JK</div>
+</th:block>
 </body>
 </html>
