--- a/src/main/resources/templates/new-reply.html
+++ b/src/main/resources/templates/new-reply.html
@@ -26,6 +26,7 @@
             </div>
         </form>
     </div>
+    <th:block th:replace="~{fragments.html :: page-footer}"></th:block>
 </div>
 </body>
 </html>
