--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -91,6 +91,7 @@
             </div>
         </form>
     </div>
+    <th:block th:replace="~{fragments.html :: page-footer}"></th:block>
 </div>
 </body>
 </html>
