--- a/src/main/resources/static/common.css
+++ b/src/main/resources/static/common.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body {
-    font-size:.9rem;
+
 }
 a {
     color: #E10B14;
@@ -215,4 +215,17 @@ h1, h2, h3, h4 {
 
 .error-off {
 
+}
+
+.page-footer{
+    text-align: center;
+    font-size: .8rem;
+    margin-top:5px;
+    padding: 5px;
+    border-top: 1px solid #E10B14;
+}
+.register-link{
+    text-align:center;
+    font-size: .8em;
+    padding: 2px;
 }
