--- a/src/main/resources/templates/new-thread.html
+++ b/src/main/resources/templates/new-thread.html
@@ -30,6 +30,7 @@
             </div>
         </form>
     </div>
+    <th:block th:replace="~{fragments.html :: page-footer}"></th:block>
 </div>
 </body>
 </html>
