--- a/src/main/resources/templates/new-topic.html
+++ b/src/main/resources/templates/new-topic.html
@@ -32,6 +32,7 @@
             </div>
         </form>
     </div>
+    <th:block th:replace="~{fragments.html :: page-footer}"></th:block>
 </div>
 </body>
 </html>
