--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -31,38 +31,42 @@
     </div>
 
     <th:block th:if="${posts.size() > 0}">
+        <h4 th:text="'Wyniki wyszukiwania dla frazy: ' + ${param.query}"> </h4>
         <div class="post-grid-headers">
             <div class="post-header">Autor</div>
             <div class="post-header">Wiadomość</div>
         </div>
 
 
-        <div th:each="post : ${posts}" class="post-grid">
-            <div class="post-grid-content" th:with="currentUser=${users.getUserById(post.authorId)}">
+        <div th:each="fullPostDTO : ${posts}" class="post-grid">
+            <div class="post-grid-content">
 
-                <div th:text="${currentUser.login}"
-                     th:class="${currentUser.function == T(com.kuba.forum.model.User.Function).ADMIN} ? 'post-author-admin' : 'post-author'">
+                <div th:text="${fullPostDTO.user.login}"
+                     th:class="${fullPostDTO.user.function == T(com.kuba.forum.model.User.Function).ADMIN} ? 'post-author-admin' : 'post-author'">
                 </div>
 
-                <div th:text="${currentUser.function.toString()}" class="post-author-info"></div>
+                <div th:text="${fullPostDTO.user.function.toString()}" class="post-author-info"></div>
 
                 <div class="post-author-info">
-                    <div th:text="'Wiek: ' + ${currentUser.getAge()}"></div>
-                    <div th:text="'Płeć: ' + ${currentUser.gender.toString()}"></div>
-                    <div th:text="'Dołączenie: ' + ${currentUser.getPrettyJoinDate()}"></div>
-                    <div th:text="'Posty: ' + ${users.getNumberOfPosts(post.authorId)}"></div>
-                    <div th:text="'Skąd: ' + ${currentUser.place}"></div>
+                    <div th:text="'Wiek: ' + ${fullPostDTO.user.getAge()}"></div>
+                    <div th:text="'Płeć: ' + ${fullPostDTO.user.gender.toString()}"></div>
+                    <div th:text="'Dołączenie: ' + ${fullPostDTO.user.getPrettyJoinDate()}"></div>
+                    <div th:text="'Posty: ' + ${fullPostDTO.numberOfUserPosts}"></div>
+                    <div th:text="'Skąd: ' + ${fullPostDTO.user.place}"></div>
                 </div>
 
             </div>
             <div class="post-grid-content">
                 <div>
-                    <span th:text="'Wysłano: ' + ${post.getPrettyDate()}" class="post-author-info"></span>
+                    <span th:text="'Wysłano:' + ${fullPostDTO.post.getPrettyDate()}" class="post-author-info"></span>
+                    <span class="post-author-info">Temat:</span>
+                    <a th:href="@{/thread/{threadId}(threadId=${fullPostDTO.thread.id})}" th:text="${fullPostDTO.thread.subject}" class="post-author-info"></a>
                 </div>
-                <div th:text="${post.contents}" class="post-message"></div>
+                <div th:text="${fullPostDTO.post.contents}" class="post-message"></div>
             </div>
         </div>
     </th:block>
+    <th:block th:replace="~{fragments.html :: page-footer}"></th:block>
 </div>
 </body>
 </html>
