--- a/src/main/resources/templates/thread-content.html
+++ b/src/main/resources/templates/thread-content.html
@@ -57,6 +57,7 @@
         <a th:href="@{/thread/{thread.id}/add-reply(thread.id=${{thread.id}})}" class="button">Odpowiedz</a>
     </div>
 
+    <th:block th:replace="~{fragments.html :: page-footer}"></th:block>
 </div>
 </body>
 </html>
