--- a/src/main/resources/static/form.css
+++ b/src/main/resources/static/form.css
@@ -3,17 +3,29 @@
     max-width: 350px;
     margin: auto;
 }
+.content-new {
+    display: block;
+    max-width: 700px;
+    margin: auto;
+}
 
 label {
     margin: 5px;
 }
 
-.input {
+.input{
+    line-height: 2rem;
     margin: 10px 5px;
     width: 100%;
+    font-size: 1rem;
+    padding: 0px 5px
 }
-.child:hover .parent {
-    backgroud-color:red;
+.textarea{
+    line-height: 1.3rem;
+    margin: 10px 5px;
+    width: 100%;
+    font-size: 1rem;
+    padding: 5px 5px
 }
 .fieldset-form{
     width: 100%;
