--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,34 +4,44 @@
     <th:block th:replace="~{fragments.html :: head-meta}"></th:block>
 </head>
 <body>
-<th:block th:replace="~{fragments.html :: page-header}"></th:block>
+<div class="wrapper">
+    <header>
+        <th:block th:replace="~{fragments.html :: page-header}"></th:block>
+    </header>
+    <section>
+        <div id="content">
+            <div class="topic-grid">
+                <div class="grid-header">Forum</div>
+                <div class="grid-header">Tematy</div>
 
-<div id="content">
-    <th:block
-            th:replace="${logged} ? ~{fragments.html :: main-menu-link-logged} : ~{fragments.html :: main-menu-link}"></th:block>
-    <th:block th:replace="~{fragments.html :: directory-link}"></th:block>
-
-    <div class="topic-grid-headers">
-        <div class="topic-header">Forum</div>
-        <div class="topic-header">Tematy</div>
-    </div>
-    <div th:each="fullTopicDTO : ${topics}" class="topic-grid">
-        <div class="topic-info">
-            <a th:text="${fullTopicDTO.topic.name}" th:href="'/topic/' + ${fullTopicDTO.topic.id}"
-               class="topic-name"></a>
-            <div class="topic-description">
-                <th:block th:text="${fullTopicDTO.topic.description}"></th:block>
-                <a th:if="${admin}"
-                   th:href="@{/topic/{topicId}/delete-topic(topicId=${fullTopicDTO.topic.id})}"
-                   onclick="return confirm('Czy na pewno chcesz usunąć to forum?')" class="delete-topic">Usuń forum</a>
+                <th:block th:each="fullTopicDTO : ${topics}">
+                    <div class="topic-info">
+                        <a th:text="${fullTopicDTO.topic.name}" th:href="'/topic/' + ${fullTopicDTO.topic.id}"
+                           class="topic-name"></a>
+                        <div class="topic-description">
+                            <th:block th:text="${fullTopicDTO.topic.description}"></th:block>
+                            <a th:if="${admin}"
+                               th:href="@{/topic/{topicId}/delete-topic(topicId=${fullTopicDTO.topic.id})}"
+                               onclick="return confirm('Czy na pewno chcesz usunąć to forum?')" class="delete-link">
+                                Usuń forum</a>
+                        </div>
+                    </div>
+                    <div class="grid-content-center">
+                        <div th:text="${fullTopicDTO.numberOfThreads}" class="topic-stats">x</div>
+                    </div>
+                </th:block>
             </div>
+            <div th:if="${topics.size() == 0}" class="no-threads">
+                Na tym forum nie ma jeszcze żadnych dyskusji.
+            </div>
+
+            <a th:if="${admin}" th:href="@{/topic/new-topic}" class="button">Nowe forum</a>
+
         </div>
-        <div th:text="${fullTopicDTO.numberOfThreads}" class="topic-stats">x</div>
-    </div>
-
-    <a th:if="${admin}" th:href="@{/topic/new-topic}" class="button">Nowe forum</a>
-
-    <th:block th:replace="~{fragments.html :: page-footer}"></th:block>
+    </section>
+    <footer>
+        <th:block th:replace="~{fragments.html :: page-footer}"></th:block>
+    </footer>
 </div>
 </body>
 </html>
