--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,42 +4,43 @@
     <th:block th:replace="~{fragments.html :: head-meta}"></th:block>
     <link rel="stylesheet" href="/form.css">
     <script src="/login-validator.js"></script>
-
 </head>
 <body>
-<th:block th:replace="~{fragments.html :: page-header}"></th:block>
+<div class="wrapper">
+    <header>
+        <th:block th:replace="~{fragments.html :: page-header}"></th:block>
+    </header>
+    <section>
+        <div id="content">
+            <div class="content-form">
+                <h3>Podaj dane logowania</h3>
+                <div th:text="${info}" class="register-info"></div>
 
-<div id="content">
-    <th:block
-            th:replace="${logged} ? ~{fragments.html :: main-menu-link-logged} : ~{fragments.html :: main-menu-link}"></th:block>
+                <form method="post" onsubmit="return validate()">
+                    <fieldset class="fieldset-form parent">
+                        <legend>Login</legend>
+                        <input type="text" name="login" id="login" class="input-form" autofocus>
+                    </fieldset>
+                    <div id="login-error"></div>
 
-    <th:block th:replace="~{fragments.html :: directory-link}"></th:block>
+                    <fieldset class="fieldset-form">
+                        <legend>Hasło</legend>
+                        <input type="password" name="password" id="password" class="input-form">
+                    </fieldset>
+                    <div id="password-error"></div>
 
-    <div class="content-form">
-        <h3>Podaj dane logowania</h3>
-        <div th:text="${info}" class="register-info"></div>
+                    <div class="form-footer">
+                        <input type="submit" value="Zaloguj" class="button">
+                    </div>
+                </form>
 
-        <form method="post" onsubmit="return validate()">
-            <fieldset class="fieldset-form parent">
-                <legend>Login</legend>
-                <input type="text" name="login" id="login" class="input-form child" autofocus>
-            </fieldset>
-            <div id="login-error"></div>
-
-            <fieldset class="fieldset-form">
-                <legend>Hasło</legend>
-                <input type="password" name="password" id="password" class="input-form">
-            </fieldset>
-            <div id="password-error"></div>
-
-            <div class="form-footer">
-                <input type="submit" value="Zaloguj" class="button">
+                <div class="register-link"><a href="/register">Zarejestruj</a></div>
             </div>
-        </form>
-
-        <div class="register-link"><a href="/register">Zarejestruj</a></div>
-    </div>
-    <th:block th:replace="~{fragments.html :: page-footer}"></th:block>
+        </div>
+    </section>
+    <footer>
+        <th:block th:replace="~{fragments.html :: page-footer}"></th:block>
+    </footer>
 </div>
 </body>
 </html>
