--- a/src/main/resources/templates/new-thread.html
+++ b/src/main/resources/templates/new-thread.html
@@ -6,31 +6,33 @@
     <script src="/thread-validator.js"></script>
 </head>
 <body>
-<th:block th:replace="~{fragments.html :: page-header}"></th:block>
+<div class="wrapper">
+    <header>
+        <th:block th:replace="~{fragments.html :: page-header}"></th:block>
+    </header>
+    <section>
+        <div id="content">
+            <div class="content-new">
+                <h3>Napisz nowy temat</h3>
+                <form method="post" onsubmit="return validate()">
+                    <label for="subject">Temat: </label>
+                    <input type="text" class="input" id="subject" th:field="*{threadModel.subject}">
+                    <div id="subject-error"></div>
 
-<div id="content">
-    <th:block
-            th:replace="${logged} ? ~{fragments.html :: main-menu-link-logged} : ~{fragments.html :: main-menu-link}"></th:block>
-
-    <th:block th:replace="~{fragments.html :: directory-link}"></th:block>
-
-    <div class="content-form">
-        <h3>Napisz nowy temat</h3>
-        <form method="post" onsubmit="return validate()">
-            <label for="subject">Temat: </label>
-            <input type="text" class="input" id="subject" th:field="*{threadModel.subject}">
-            <div id="subject-error"></div>
-
-            <label for="contents">Treść wiadomości: </label>
-            <textarea class="input" id="contents" rows="20" th:field="*{postModel.contents}"></textarea>
-            <div id="contents-error"></div>
-            <div class="form-footer">
-                <input type="submit" value="Wyślij" class="button">
-                <input type="reset" value="Reset" class="button">
+                    <label for="contents">Treść wiadomości: </label>
+                    <textarea class="textarea" id="contents" rows="15" th:field="*{postModel.contents}"></textarea>
+                    <div id="contents-error"></div>
+                    <div class="form-footer">
+                        <input type="submit" value="Wyślij" class="button">
+                        <input type="reset" value="Reset" class="button">
+                    </div>
+                </form>
             </div>
-        </form>
-    </div>
-    <th:block th:replace="~{fragments.html :: page-footer}"></th:block>
+        </div>
+    </section>
+    <footer>
+        <th:block th:replace="~{fragments.html :: page-footer}"></th:block>
+    </footer>
 </div>
 </body>
 </html>
