--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -4,94 +4,95 @@
     <th:block th:replace="~{fragments.html :: head-meta}"></th:block>
     <link rel="stylesheet" href="/form.css">
     <script src="/register-validator.js"></script>
-
 </head>
 <body>
-<th:block th:replace="~{fragments.html :: page-header}"></th:block>
+<div class="wrapper">
+    <header>
+        <th:block th:replace="~{fragments.html :: page-header}"></th:block>
+    </header>
+    <section>
+        <div id="content">
+            <div class="content-form">
+                <h3>Podaj dane rejestracyjne</h3>
+                <div th:text="${info}" class="register-info"></div>
+                <form method="post" onsubmit="return validate()">
+                    <fieldset class="fieldset-form">
+                        <legend>Login</legend>
+                        <input type="text" class="input-form" id="login" th:field="*{userModel.login}" autofocus><br>
+                    </fieldset>
 
-<div id="content">
-    <th:block
-            th:replace="${logged} ? ~{fragments.html :: main-menu-link-logged} : ~{fragments.html :: main-menu-link}"></th:block>
-    <th:block th:replace="~{fragments.html :: directory-link}"></th:block>
+                    <!--            <label for="login">Login: </label><br>-->
+                    <!--            <input type="text" class="input" id="login" th:field="*{userModel.login}" autofocus><br>-->
+                    <div id="login-error"></div>
 
-
-    <div class="content-form">
-        <h3>Podaj dane rejestracyjne</h3>
-        <div th:text="${info}" class="register-info"></div>
-        <form method="post" onsubmit="return validate()">
-            <fieldset class="fieldset-form">
-                <legend>Login</legend>
-                <input type="text" class="input-form" id="login" th:field="*{userModel.login}" autofocus><br>
-            </fieldset>
-
-            <!--            <label for="login">Login: </label><br>-->
-            <!--            <input type="text" class="input" id="login" th:field="*{userModel.login}" autofocus><br>-->
-            <div id="login-error"></div>
-
-            <fieldset class="fieldset-form">
-                <legend>Hasło</legend>
-                <input type="password" class="input-form" id="password" th:field="*{userModel.password}">
-            </fieldset>
+                    <fieldset class="fieldset-form">
+                        <legend>Hasło</legend>
+                        <input type="password" class="input-form" id="password" th:field="*{userModel.password}">
+                    </fieldset>
 
 
-            <!--            <label for="password">Hasło: </label><br>-->
-            <!--            <input type="password" class="input-form" id="password" th:field="*{userModel.password}"><br>-->
-            <div id="password-error"></div>
+                    <!--            <label for="password">Hasło: </label><br>-->
+                    <!--            <input type="password" class="input-form" id="password" th:field="*{userModel.password}"><br>-->
+                    <div id="password-error"></div>
 
-            <fieldset class="fieldset-form">
-                <legend>Powtórz hasło</legend>
-                <input type="password" class="input-form" id="password2" name="password2">
-            </fieldset>
-            <!--            <label for="password2">Powtórz hasło: </label><br>-->
-            <!--            <input type="password" class="input-form" id="password2" name="password2"><br>-->
-            <div id="password2-error"></div>
+                    <fieldset class="fieldset-form">
+                        <legend>Powtórz hasło</legend>
+                        <input type="password" class="input-form" id="password2" name="password2">
+                    </fieldset>
+                    <!--            <label for="password2">Powtórz hasło: </label><br>-->
+                    <!--            <input type="password" class="input-form" id="password2" name="password2"><br>-->
+                    <div id="password2-error"></div>
 
-            <fieldset class="fieldset-form">
-                <legend>E-mail</legend>
-                <input type="text" class="input-form" id="email" th:field="*{userModel.email}">
-            </fieldset>
+                    <fieldset class="fieldset-form">
+                        <legend>E-mail</legend>
+                        <input type="text" class="input-form" id="email" th:field="*{userModel.email}">
+                    </fieldset>
 
-            <!--            <label for="email">E-mail: </label><br>-->
-            <!--            <input type="text" class="input-form" id="email" th:field="*{userModel.email}"><br>-->
-            <div id="email-error"></div>
+                    <!--            <label for="email">E-mail: </label><br>-->
+                    <!--            <input type="text" class="input-form" id="email" th:field="*{userModel.email}"><br>-->
+                    <div id="email-error"></div>
 
-            <fieldset class="fieldset-form">
-                <legend>Data urodzenia</legend>
-                <input type="date" class="input-form" id="birthday" th:field="*{userModel.birthday}">
-            </fieldset>
+                    <fieldset class="fieldset-form">
+                        <legend>Data urodzenia</legend>
+                        <input type="date" class="input-form" id="birthday" th:field="*{userModel.birthday}">
+                    </fieldset>
 
-            <!--            <label for="birthday">Data urodzenia: </label><br>-->
-            <!--            <input type="date" class="input-form" id="birthday" th:field="*{userModel.birthday}"><br>-->
-            <div id="birthday-error"></div>
+                    <!--            <label for="birthday">Data urodzenia: </label><br>-->
+                    <!--            <input type="date" class="input-form" id="birthday" th:field="*{userModel.birthday}"><br>-->
+                    <div id="birthday-error"></div>
 
-            <fieldset class="fieldset-form">
-                <legend>Płeć</legend>
-                <input type="radio" id="male" name="gender" value="MALE"
-                       th:field="*{userModel.gender}" checked="checked">
-                <label class="input-radio" for="male">Mężczyzna</label><br>
+                    <fieldset class="fieldset-form">
+                        <legend>Płeć</legend>
+                        <input type="radio" id="male" name="gender" value="MALE"
+                               th:field="*{userModel.gender}" checked="checked">
+                        <label class="input-radio" for="male">Mężczyzna</label><br>
 
-                <input type="radio" id="female" name="gender" value="FEMALE"
-                       th:field="*{userModel.gender}">
-                <label class="input-radio" for="female">Kobieta</label><br>
-            </fieldset>
-            <div id="gender-error"></div>
+                        <input type="radio" id="female" name="gender" value="FEMALE"
+                               th:field="*{userModel.gender}">
+                        <label class="input-radio" for="female">Kobieta</label><br>
+                    </fieldset>
+                    <div id="gender-error"></div>
 
-            <fieldset class="fieldset-form">
-                <legend>Skąd</legend>
-                <input type="text" class="input-form" id="place" th:field="*{userModel.place}">
-            </fieldset>
+                    <fieldset class="fieldset-form">
+                        <legend>Skąd</legend>
+                        <input type="text" class="input-form" id="place" th:field="*{userModel.place}">
+                    </fieldset>
 
-            <!--            <label for="place">Skąd: </label><br>-->
-            <!--            <input type="text" class="input" id="place" th:field="*{userModel.place}"><br>-->
-            <div id="place-error"></div>
+                    <!--            <label for="place">Skąd: </label><br>-->
+                    <!--            <input type="text" class="input" id="place" th:field="*{userModel.place}"><br>-->
+                    <div id="place-error"></div>
 
-            <div class="form-footer">
-                <input type="submit" value="Zarejestruj" class="button">
-                <input type="reset" value="Wyczyść formularz" class="button">
+                    <div class="form-footer">
+                        <input type="submit" value="Zarejestruj" class="button">
+                        <input type="reset" value="Wyczyść formularz" class="button">
+                    </div>
+                </form>
             </div>
-        </form>
-    </div>
-    <th:block th:replace="~{fragments.html :: page-footer}"></th:block>
+        </div>
+    </section>
+    <footer>
+        <th:block th:replace="~{fragments.html :: page-footer}"></th:block>
+    </footer>
 </div>
 </body>
 </html>
